Actualizadas las traducciones.

--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1343,20 +1343,20 @@
     "send-mail-error": "Erreur lors de l'envoi de l'e-mail",
     "send-mail-ok": "L'e-mail a été envoyé avec succès",
     "send-videos": "Envoyer des vidéos",
-    "sent-a-audio": "Envió un audio",
-    "sent-a-document": "Envió un documento",
-    "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
-    "sent-a-video": "Envió un video",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-a-audio": "Il a envoyé un fichier audio",
+    "sent-a-document": "Envoi d'un document",
+    "sent-a-location": "Envoi d'un lieu",
+    "sent-a-picture": "Envoi d'une image",
+    "sent-a-video": "Envoi d'une vidéo",
+    "sent-message-by": "Soumis par %nick% le %date%.",
     "sepa-suffix": "Suffixe SEPA",
-    "september": "Septiembre",
+    "september": "Septembre",
     "sequences": "Numérotations",
     "serial-number": "Numéro de série",
     "serie": "série",
-    "serieb": "Serie B",
-    "serier": "Serie R",
-    "serierb": "Serie RB",
+    "serieb": "Série B",
+    "serier": "Série R",
+    "serierb": "Série RB",
     "series": "séries",
     "server": "serveur:",
     "service": "Service",
@@ -1380,25 +1380,25 @@
     "show-pending-remittances": "Afficher les remises en attente",
     "show-price": "Afficher le prix sur l'impression",
     "show-quantity": "Afficher la quantité sur l'impression",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Afficher la section de création",
     "signature": "Signature",
     "simple": "Simple",
-    "simplified": "Simplificada",
+    "simplified": "Simplifié",
     "size": "taille",
     "sketch": "Esquisse",
     "sketch-invoice-warning": "Cette facture est une ébauche. Officialisez-la en modifiant son état pour 'Émis'.",
     "small": "Petit",
     "smaller-than": "Plus petit que",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "L'extension SOAP n'est pas activée dans PHP. Contactez votre hébergeur pour l'activer.",
     "social-security-number": "Numéro de sécurité sociale",
     "sort": "Commande",
-    "sort-by-column": "Ordenar por columna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
-    "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sort-by-column": "Tri par colonne",
+    "sort-by-date-asc": "Trier par date décroissante.",
+    "sort-by-date-desc": "Trier par date décroissante.",
+    "sort-by-ref-asc": "Trier par référence asc.",
+    "sort-by-ref-desc": "Trier par référence descendante.",
+    "sorted-asc": "Tri par ordre croissant",
+    "sorted-desc": "Tri par ordre décroissant",
     "source": "Source",
     "source-code": "Code source",
     "special-account": "Compte spécial",
@@ -1409,7 +1409,7 @@
     "standard": "Standard",
     "start": "Départ",
     "start-date": "Date de début",
-    "start-hour": "Hora de inicio",
+    "start-hour": "Heure de début",
     "start-time": "Heure de départ",
     "starting-cron": "Exécution des tâches programmées de FacturaScripts ...",
     "state": "Etat",
@@ -1423,14 +1423,14 @@
     "stock-transfers": "Transferts de stock",
     "stockmax": "Stock max.",
     "stockmin": "Stock min.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "La limite de stockage est presque atteinte (%limit%). Restez %free%.",
     "storage-limit-reached": "Limite de stock atteinte",
     "stripe": "Stripe",
     "structured-data-csv": "Fichier CSV",
     "sub-account": "Sous-compte",
     "sub-type": "Sous-type",
     "subaccount": "Sous-comptes",
-    "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
+    "subaccount-bad-codcuenta": "Le sous-compte %codsubaccount% a un compte incorrect qui lui a été attribué.",
     "subaccount-belongs-other-year": "Le sous-compte %subAccountCode% appartient à un autre exercice.",
     "subaccount-irpf": "Compte pour les déductions",
     "subaccount-irpf-creditor": "Sous-compte créditeur pour l'IRPP",
@@ -1444,7 +1444,7 @@
     "subtotal": "Sous-total",
     "subtract": "Soustraire",
     "success": "Succès",
-    "sum": "Suma",
+    "sum": "Somme",
     "sum-netos-line-tax-must-be": "La somme du net des lignes de TVA devrait être: %lineNet%",
     "sum-total-line-tax-must-be": "La somme des totaux de TVA des lignes de TVA devrait être: %lineTotalTax%",
     "summary": "Résumé",
@@ -1460,7 +1460,7 @@
     "supplier-delivery-notes": "Les bons de livraison des fournisseurs",
     "supplier-estimation": "Devis fournisseur",
     "supplier-estimations": "Budgets des fournisseurs",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "Le fournisseur %supplier% n'a pas d'IBAN (compte bancaire)",
     "supplier-invoice": "Facture fournisseur",
     "supplier-invoice-deleted-successfully": "La facture d'achat %docCode% a été supprimée avec succès.",
     "supplier-invoices": "Factures fournisseurs",
@@ -1471,8 +1471,8 @@
     "supplier-products": "Produits du fournisseur",
     "supplier-reference": "Référence du fournisseur",
     "suppliers": "Fournisseurs",
-    "support": "Soporte",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "support": "Soutien",
+    "supported-tax-re-subaccount": "Sous-compte de la surtaxe sur les intrants",
     "supported-tax-subaccount": "Sous-compte de la taxe d'amont",
     "surcharge": "Surtaxe",
     "surname": "nom",
@@ -1498,7 +1498,7 @@
     "tax-transport": "Transport fiscal",
     "taxes": "Taxes",
     "telemetry-data-to-send": "Les installations enregistrées transmettent périodiquement la version de FacturaScripts et de PHP, le pays, la langue et la liste des modules externes.",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Préfixe téléphonique",
     "template": "Modèle",
     "template-error": "Erreur du modèle",
     "template-not-found": "Modèle non trouvé",
@@ -1507,7 +1507,7 @@
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Color de texto",
     "texts": "Textes",
-    "third-quarter": "3º trimestre",
+    "third-quarter": "3ème trimestre",
     "third-trimester": "Troisième trimestre",
     "this-last-fortnight": "Les 15 derniers jours",
     "this-last-month": "Ce mois dernier",
@@ -1527,7 +1527,7 @@
     "title-url": "Titre (URL)",
     "to": "Pour",
     "to-refund": "À rembourser",
-    "to-report": "Informar",
+    "to-report": "Rapport",
     "today": "Aujourd'hui",
     "total": "Total",
     "total-amount": "Montant total",
@@ -1539,7 +1539,7 @@
     "totalirpf-value-error": "Montant total IRPF de %docType% %docCode% incorrect (%docTotalIRPF%). Montant correct: %calcTotalIRPF%",
     "totaliva-value-error": "Montant total des taxes de %docType% %docCode% incorrect (%docTotalTax%). Montant correct: %calcTotalTax%",
     "totallinea-value-error": "Erreur dans la valeur totallinea de la ligne de TVA de la taxe %taxCode% de la facture. Valeur correcte: %totalLine%",
-    "totals": "Totales",
+    "totals": "totaux",
     "town": "Ville",
     "tracking-code": "Code de suivi",
     "transfer": "Transfert",
@@ -1547,7 +1547,7 @@
     "transfers-stock": "Transferts de stock",
     "translation": "Traduction",
     "translations": "traductions:",
-    "travel": "Viaje",
+    "travel": "Voyage",
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
     "type": "Type",
@@ -1561,17 +1561,17 @@
     "type-success": "type succès",
     "type-warning": "Type avertissement",
     "unbalance": "Déséquilibre",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Siège non ajusté",
     "unchecked": "Non vérifié",
     "under-minimums": "Sous les minima",
     "undo": "annuler",
     "unit-profit": "Bénéfice à l'unité",
     "unit-purchase-price": "Prix d'achat à l'unité",
     "unit-sale-price": "Prix de vente à l'unité",
-    "unlimited": "Ilimitado",
+    "unlimited": "Illimité",
     "unlink": "Rompre le lien",
     "unlink-file": "Rompre le lien du fichier",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "L'installation a été supprimée avec succès du registre.",
     "unlock-entry": "Déverrouiller",
     "unpaid": "Non payé",
     "until-accounting-entry": "Jusqu'à l'entrée",
@@ -1583,19 +1583,19 @@
     "update-time": "Heure de mise à jour",
     "updated-model": "%model% (%key%) %desc% mis à jour",
     "updater": "Processus de mise à jour",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Mise à jour des compteurs de pièces jointes",
     "upload-file": "Subir archivo",
     "uploaded-at": "Téléversé vers",
     "url": "Site Internet",
     "use-gaps": "Utiliser les écarts",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Si vous désactivez l'utilisation des écarts de facturation et que vous supprimez une facture, l'écart restera sur la facture et vous aurez des problèmes avec l'administration fiscale.",
     "user": "Utilisateur",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Utilisateur et configuration",
     "users": "utilisateurs",
     "using-apc": "Utilisation du cache APC",
     "using-filecache": "Utiliser Filecache",
     "using-memcache": "Utiliser Memcache",
-    "valid-for-day": "Válido para un día",
+    "valid-for-day": "Valable pour une journée",
     "validate": "Valider",
     "validate-iban": "Valider IBAN",
     "valuation-type": "Type d'évaluation",
@@ -1608,27 +1608,27 @@
     "variants": "Variantes",
     "vat": "TVA",
     "vat-document": "Document de TVA",
-    "vat-exception": "Excepción de IVA",
-    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-exception": "Dérogation à la TVA",
+    "vat-number-is-short": "Le numéro \"%vat-number%\" est trop court",
+    "vat-number-not-vies": "Le numéro \"%vat-number%\" n'est pas enregistré dans le système VIES.",
     "vat-regime": "Régime de TVA",
     "VAT-register": "Livre d'impôt",
     "vat-regularization": "Régularisation de la TVA",
     "vehicle": "Véhicule",
     "verified": "vérifié",
     "version": "Version",
-    "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
-    "view-api": "Ver API",
-    "view-column-net-subtotal": "Ver columna subtotal o neto",
-    "view-estimation": "Ver presupuesto",
-    "view-order": "Ver pedido",
+    "video": "Vidéo",
+    "vies-check-success": "Le numéro \"%vat-number%\" est enregistré dans le système VIES.",
+    "view-api": "Voir API",
+    "view-column-net-subtotal": "Voir colonne sous-total ou net",
+    "view-estimation": "Voir le devis",
+    "view-order": "Voir la commande",
     "warehouse": "Entrepôt",
     "warehouse-cant-be-same": "L'entrepôt d'origine et de destination ne peut pas être le même.",
     "warehouse-must-be-same-business": "Les entrepôts doivent provenir de la même entreprise",
     "warehouses": "Entrepôts",
     "warning": "Avertissement",
-    "warnings": "Avisos",
+    "warnings": "Avis",
     "web": "Web",
     "website": "Site Internet",
     "wednesday": "Mercredi",
@@ -1641,7 +1641,7 @@
     "wildcard-title": "Caractères de substitution par valeur",
     "without-closure": "Sans clôture",
     "without-domicile": "Non domicilié",
-    "without-groups": "Sin grupo",
+    "without-groups": "Pas de groupe",
     "without-regularization": "Sans régularisation",
     "without-tax": "Sans taxe",
     "without-taxation": "Sans taxation",
@@ -1649,8 +1649,8 @@
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
     "work-events": "Événements de travail",
-    "working-hours": "Horario de trabajo",
-    "write-a-message-here": "Escribe un mensaje aquí",
+    "working-hours": "Heures de travail",
+    "write-a-message-here": "Écrire un message ici",
     "x-column": "Colonne X",
     "x-operation": "Opération sur X",
     "y-column": "Colonne Y",
@@ -1660,15 +1660,15 @@
     "years": "Années",
     "yes": "Si",
     "yesterday": "Hier",
-    "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
-    "you-sent-a-audio": "Enviaste un audio",
-    "you-sent-a-document": "Enviaste un documento",
-    "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
-    "you-sent-a-video": "Enviaste un video",
+    "you-cant-delete-primary-variant": "Vous ne pouvez pas supprimer la variante principale du produit",
+    "you-sent-a-audio": "Vous avez envoyé un audio",
+    "you-sent-a-document": "Vous avez envoyé un document",
+    "you-sent-a-location": "Vous avez envoyé une localisation",
+    "you-sent-a-picture": "Vous avez envoyé une image",
+    "you-sent-a-video": "Vous avez envoyé une vidéo",
     "you-should-change-passwd": "Vous devriez changer votre mot de passe",
     "your": "Votre",
     "zip-code": "Code postal",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Codes postaux",
     "zip-error-wrong-structure": "Erreur dans la structure du fichier ZIP. Il doit contenir le dossier du module externe, et un seul module."
 }
