Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1345,12 +1345,12 @@
     "send-videos": "Odeslat videa",
     "sent-a-audio": "Odeslal zvuk",
     "sent-a-document": "Odeslal dokument",
-    "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
-    "sent-a-video": "Envió un video",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-a-location": "Poslal polohu",
+    "sent-a-picture": "Poslal obrázek",
+    "sent-a-video": "Poslal video",
+    "sent-message-by": "Odesláno uživatelem %nick% dne %date%",
     "sepa-suffix": "Sufijo SEPA",
-    "september": "Septiembre",
+    "september": "Září",
     "sequences": "Secuencias",
     "serial-number": "Número de Serie",
     "serie": "Serie",
@@ -1380,7 +1380,7 @@
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Mostrar precio en la impresión",
     "show-quantity": "Mostrar cantidad en la impresión",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Zobrazit novou sekci",
     "signature": "Firma",
     "simple": "Simple",
     "simplified": "Simplificada",
