--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1333,7 +1333,7 @@
     "selected-quantity": "Selected Qty",
     "selector-number": "Selector",
     "send": "Send",
-    "send-anonymous-data": "Enviar datos anónimos",
+    "send-anonymous-data": "Send anonymous data",
     "send-audios": "Send audio",
     "send-documents": "Send documents",
     "send-images": "Send images",
