--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1254,7 +1254,7 @@
     "refresh": "Eguneratu",
     "refresh-page": "Orria eguneratu",
     "refund-amount": "Itzulketaren zenbatekoa",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Devoluzioa egingo da %document% dokumentua itzulita",
     "refunds": "Itzulketak",
     "register": "Erregistratu",
     "register-installation": "Instalazioa erregistratu",
@@ -1271,14 +1271,14 @@
     "reloading": "Kargatzen...",
     "remove-filter": "Iragazkia kendu",
     "remove-from-list": "Kendu",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Aldaketak %date%-ra artean ezabatzen",
     "renew": "Berritu",
     "renumber": "Berzenbakitu",
     "renumber-accounting": "Idazpenei zenbaki berriak eman",
     "renumber-accounting-error": "Errore bat gertatu da %exerciseCode%. ekitaldiko idazpenei zenbaki berriak ematean",
     "renumber-accounting-ok": "Idazpenen zenbaki berri ematea bukatu da",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-accounting-p": "Asientoak dataren arabera berreraginez kezkatzen du",
+    "renumber-invoices-p": "Fakturak dataren arabera berreraginez kezkatzen du",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Pasahitza berriz sartu",
     "repeat-password": "Pasahitza errepikatu",
@@ -1286,7 +1286,7 @@
     "report": "Txostena",
     "report-grouping-account": "Kontuen arabera elkartu",
     "report-non-grouping-account": "Ez elkartu kontuen arabera",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Txartelak edo saltzean egindako fakturak bistaratzeko aukera ematen du aukeratutako tartean egon diren zergen azalpena",
     "reports": "Txostenak",
     "request-sent": "Eskaria bidalita",
     "required": "Derrigorrezkoa",
@@ -1294,7 +1294,7 @@
     "reserved": "Gordeta",
     "reset": "Berrezarri",
     "resource": "Baliabidea",
-    "respond": "Responder",
+    "respond": "Erantzun",
     "restore": "Berrezarri",
     "restore-data": "Datuak berreskuratu",
     "result": "Emaitza",
