--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -65,47 +65,47 @@
     "adult": "Adulto",
     "advanced": "Avanzado",
     "agent": "Agente",
-    "agent-commission-info": "agent-commission-info",
-    "agent-dont-have-associated-supplier": "agent-dont-have-associated-supplier",
+    "agent-commission-info": "agente-commissione-info",
+    "agent-dont-have-associated-supplier": "agente-non-ha-fornitori-affiliati",
     "agents": "Agenti",
     "alert": "allarme",
     "alerts": "avvisi",
     "alfa-code-2": "Codice Alfa 2",
     "alfa-code-3": "Codice Alfa 3",
     "alias": "Alias",
-    "alias-general-info": "Allows you to give a name to the value of the column on your left",
-    "alias-wildcard-info": "Alias value previously defined. Example: %import%, %vat%",
+    "alias-general-info": "Consente di assegnare un nome al valore della colonna a sinistra.",
+    "alias-wildcard-info": "Valore alias definito in precedenza. Esempio: %import%, %vat%",
     "all": "Tutti",
     "all-variants": "Tutte le varianti",
     "allow-delete": "Consenti eliminazione",
-    "allow-delete-data": "Allow DELETE",
+    "allow-delete-data": "DELETE zulassen",
     "allow-export": "Consentire l'esportazione",
-    "allow-get-data": "Allow GET",
+    "allow-get-data": "GET zulassen",
     "allow-import": "Consentire l'importazione",
-    "allow-marketing": "allow-marketing",
-    "allow-post-data": "Allow POST",
-    "allow-put-data": "Allow PUT",
-    "allow-sale-without-stock": "Allow sale without stock",
+    "allow-marketing": "zulassen-Marketing",
+    "allow-post-data": "POST zulassen",
+    "allow-put-data": "PUT zulassen",
+    "allow-sale-without-stock": "Verkauf ohne Lagerbestand zulassen",
     "allow-sale-without-stock-n": "consentire-vendita-senza-stock-n",
     "allow-update": "Consenti aggiornamento",
     "always-to-company-email": "Sempre alla mail aziendale",
     "amount": "Quantità",
-    "amount-without-discount": "Ammount without discount",
+    "amount-without-discount": "Importo senza sconto",
     "and": "e",
     "any": "Qualunque",
     "any-group": "Qualsiasi gruppo",
-    "apache-module-not-found": "apache-module-not-found",
+    "apache-module-not-found": "apache-modulo-non-trovato",
     "apc-clear": "APC cancellato.",
     "apc-delete-key-item": "Elemento eliminato '0' da APC.",
     "apc-get-key-item": "Elemento gettato '0' da APC.",
     "apc-set-key-item": "Elemento settato '0' in APC.",
     "api": "API",
-    "api-disabled": "api-disabled",
-    "api-key": "API key",
-    "api-keys": "API Keys",
+    "api-disabled": "api-disabilitato",
+    "api-key": "Chiave API",
+    "api-keys": "Chiavi API",
     "api-version-not-found": "Versione API non trovata",
     "app-preferences": "Preferenze app",
-    "applied-tax": "applied-tax",
+    "applied-tax": "imposta applicata",
     "apply": "Applica",
     "approve": "Approvare",
     "approve-document": "Approvare documento",
@@ -114,16 +114,16 @@
     "april": "Aprile",
     "are-you-sure": "Questa azione non può essere annullata. Sei sicuro di voler continuare?",
     "are-you-sure-action": "Questa azione richiede conferma. Sei sicuro di voler continuare?",
-    "asset": "Asset",
+    "asset": "Patrimonio",
     "assigned": "Assegnato",
-    "attached-file": "Attached file",
-    "attached-files": "Attached files",
+    "attached-file": "File allegato",
+    "attached-files": "File allegati",
     "attribute": "Attributo",
     "attribute-value-1": "Valore attributo 1",
     "attribute-value-2": "Valore attributo 2",
     "attribute-value-3": "valore attributo 3",
     "attribute-value-4": "valore attributo 4",
-    "attribute-values": "Attribute values",
+    "attribute-values": "Valori degli attributi",
     "attributes": "attributi",
     "audio": "Audio",
     "august": "Agosto",
@@ -502,16 +502,16 @@
     "email-cc": "Email Copia Conoscenza",
     "email-not-configured": "email-not-configured",
     "email-not-sent": "Non inviato",
-    "email-notification": "Notificación por email",
+    "email-notification": "Notifica via email",
     "email-notification-disabled": "La notifica email di %name% è disabilitata",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
+    "email-notification-not-exists": "Notifica via email %name% non trovata",
     "email-replies": "risposta e-mail",
     "email-replies-to": "email-replies-to",
     "email-sent": "Inviato via Mail",
     "email-sent-to": "email-sent-to",
     "email-signature": "Firma Email",
     "email-to": "Email A",
-    "emails": "Emails",
+    "emails": "Email",
     "emails-sent": "emails-sent",
     "employee": "Employee",
     "employees": "employees",
@@ -1333,7 +1333,7 @@
     "selected-quantity": "Quantità selezionata",
     "selector-number": "Selector",
     "send": "Invia",
-    "send-anonymous-data": "Enviar datos anónimos",
+    "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
