Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1383,22 +1383,22 @@
     "show-section-new": "Zobrazit novou sekci",
     "signature": "Firma",
     "simple": "Simple",
-    "simplified": "Simplificada",
+    "simplified": "Zjednodušený",
     "size": "Tamaño",
     "sketch": "Boceto",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Pequeño",
     "smaller-than": "Menor que",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "Rozšíření SOAP není instalováno v PHP. Kontaktujte svého poskytovatele hostingu pro jeho aktivaci.",
     "social-security-number": "Número Seguridad Social",
     "sort": "Orden",
-    "sort-by-column": "Ordenar por columna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
-    "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sort-by-column": "Seřadit podle sloupce",
+    "sort-by-date-asc": "Seřadit podle data vzestupně",
+    "sort-by-date-desc": "Seřadit podle data sestupně",
+    "sort-by-ref-asc": "Seřadit podle reference vzestupně",
+    "sort-by-ref-desc": "Seřadit podle reference sestupně",
+    "sorted-asc": "Seřazeno vzestupně",
+    "sorted-desc": "Seřazeno sestupně",
     "source": "Fuente",
     "source-code": "Código fuente",
     "special-account": "Cuenta especial",
