--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -107,7 +107,7 @@
     "app-preferences": "App-Einstellungen",
     "applied-tax": "angewandte Steuer",
     "apply": "Anwenden",
-    "approve": "Aprobar",
+    "approve": "Genehmigen",
     "approve-document": "Dokument genehmigen",
     "approve-document-same-date": "Dokument zum gleichen Datum genehmigen",
     "approved": "genehmigt",
@@ -165,8 +165,8 @@
     "body": "Cuerpo",
     "book": "reservieren",
     "box-closed-ok": "Karton richtig geschlossen",
-    "boxes": "Cajas",
-    "browse": "Examinar",
+    "boxes": "Boxen",
+    "browse": "Durchsuchen",
     "business-name": "Firmenname",
     "buy": "Kaufen",
     "cache": "Cache-Speicher",
