--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1331,14 +1331,14 @@
     "select-plugin-zip-file": "Hautatu plugin zip fitxategia:",
     "select-user": "Aukeratu erabiltzailea",
     "selected-quantity": "Hautatutako kantitatea",
-    "selector-number": "Selector",
+    "selector-number": "Hautatzailea",
     "send": "Bidali",
-    "send-anonymous-data": "Enviar datos anónimos",
-    "send-audios": "Enviar audios",
-    "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
+    "send-anonymous-data": "Bidali datu anonimoak",
+    "send-audios": "Bidali audioak",
+    "send-documents": "Bidali dokumentuak",
+    "send-images": "Bidali irudiak",
     "send-invoices": "Fakturak bidali",
-    "send-location": "Enviar ubicación",
+    "send-location": "Bidali kokapena",
     "send-mail": "Emaila bidali",
     "send-mail-error": "Errorea posta elektronikoa bidaltzean",
     "send-mail-ok": "Posta ondo bidalia",
