--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -495,7 +495,7 @@
     "duplicated-reference": "Riferimento '%reference%' duplicato",
     "duplicated-request": "duplicated-request",
     "duration": "durata",
-    "edit": "edit",
+    "edit": "modifica",
     "editable": "Modificabile",
     "email": "e-mail",
     "email-bcc": "Email Copia Conoscenza Nascosta",
@@ -513,11 +513,11 @@
     "email-to": "Email A",
     "emails": "Email",
     "emails-sent": "emails-sent",
-    "employee": "Employee",
-    "employees": "employees",
+    "employee": "Dipendente",
+    "employees": "dipendenti",
     "empty": "Nessuno",
-    "empty-contact-data": "El contacto debe tener nombre o email o dirección",
-    "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
+    "empty-contact-data": "Il contatto deve avere nome o e-mail o indirizzo",
+    "empty-ref-or-missing": "Riferimento vuoto o prodotto non trovato",
     "enable": "attivare",
     "enable-api": "Attiva API",
     "enable-updates-beta": "Activar actualizaciones beta",
