Google tag manager ahora solo puede activarse desde el instalador.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1423,7 +1423,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Téměř dosažen limit skladování (%limit%). Zbývá %free%",
     "storage-limit-reached": "Límite de almacenamiento alcanzado",
     "stripe": "Stripe",
     "structured-data-csv": "Archivo CSV",
@@ -1432,8 +1432,8 @@
     "subaccount": "Subcuenta",
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "La subcuenta %subAccountCode% pertenece a otro ejercicio.",
-    "subaccount-irpf": "Cuenta para retenciones",
-    "subaccount-irpf-creditor": "Cuenta del acreedor de IRPF",
+    "subaccount-irpf": "Účet pro zálohy",
+    "subaccount-irpf-creditor": "Účet věřitele záloh na daň z příjmů",
     "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
     "subaccount-purchases": "Cuenta para compras",
     "subaccount-pyg-not-found": "Subcuenta de pérdidas y ganancias no encontrada",
@@ -1444,7 +1444,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
-    "sum": "Suma",
+    "sum": "Součet",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma de los totales de iva de las líneas de IVA debería ser: %lineTotalTax%",
     "summary": "Resumen",
@@ -1460,7 +1460,7 @@
     "supplier-delivery-notes": "Albaranes de proveedores",
     "supplier-estimation": "Presupuesto de Proveedor",
     "supplier-estimations": "Presupuestos de proveedores",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "Dodavatel %%supplier nemá IBAN (bankovní účet)",
     "supplier-invoice": "Factura de Proveedor",
     "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
     "supplier-invoices": "Facturas de proveedores",
@@ -1471,8 +1471,8 @@
     "supplier-products": "Productos del proveedor",
     "supplier-reference": "Referencia de proveedor",
     "suppliers": "Proveedores",
-    "support": "Soporte",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "support": "Podpora",
+    "supported-tax-re-subaccount": "Podporovaný daňový podúčet",
     "supported-tax-subaccount": "Subcuenta impuesto soportado",
     "surcharge": "Recargo",
     "surname": "Apellidos",
