--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -172,16 +172,16 @@
     "cache": "Cache-Speicher",
     "cache-dir": "Cache-Verzeichnis '0'",
     "calculate": "kalkulieren",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Differenz gefunden bei der Berechnung des Netto. %net% vs %net2%",
+    "calculated-surcharge-diff": "Differenz gefunden bei der Berechnung des Pauschalbetrags. %surcharge% vs %surcharge2%",
+    "calculated-tax-diff": "Differenz gefunden bei der Berechnung der Gesamt-UST. %tax% vs %tax2%",
     "calculation": "Kalkulation",
     "calendar": "Kalendar",
     "can-not-open-zip-file": "Kann die Zip-Datei '0' nicht öffnen",
     "cancel": "Stornieren",
     "cancel-data": "Brechen Sie Änderungen oder Operationen ab",
     "cancelled": "abgebrochen",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Fehler beim Generieren des Buchungssatzes für die Rechnung %invoice%",
     "cant-assign-date-already-regularized": "Sie können das Datum 0 nicht zuordnen, da für diesen Zeitraum bereits eine Regularisierung von 1 vorliegt.",
     "cant-assing-subaccount-supplier": "Unterkonto für Anbieter 0 kann nicht zugeordnet werden",
     "cant-associate-customer-subaccount": "Unterkonto für Client 0 kann nicht zugeordnet werden",
@@ -192,7 +192,7 @@
     "cant-create-customer-subaccount": "Kann Kundenunterkonto nicht erstellen",
     "cant-create-folder": "Ordner kann nicht erstellt werden.",
     "cant-create-subaccount-supplier": "Kann das Unterkonto für den Anbieter nicht erstellen",
-    "cant-delete-audit-log": "No se puede eliminar un registro de auditoria",
+    "cant-delete-audit-log": "Ein Prüfungsprotokoll kann nicht gelöscht werden",
     "cant-delete-default-company": "Sie können die Standardfirma löschen",
     "cant-delete-default-country": "Sie können die Standardstadt löschen",
     "cant-delete-default-currency": "Sie können die Standardwährung löschen",
@@ -201,13 +201,13 @@
     "cant-delete-default-tax": "Sie können die Standardsteuer löschen",
     "cant-delete-default-warehouse": "Sie können den Standardslager löschen",
     "cant-delete-last-user": "Der letzte Benutzer kann nicht gelöscht werden",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "Das Produkt oder die Variante %reference% kann nicht gelöscht werden, da es bereits gekauft oder verkauft wurde. Sie können es jedoch sperren, wenn Sie möchten.",
     "cant-load-controller": "Controller kann nicht geladen werden.",
     "cant-modify-reference": "Kann keine Referenz bearbeiten.",
     "cant-remove-accounting-entry": "Buchung kann nicht gelöscht werden",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Eine Rechnung mit Gutschrift (Rückzahlung) kann nicht gelöscht werden",
     "cant-remove-receipt": "Beleg kann nicht gelöscht werden",
-    "cant-update-audit-log": "No se puede modificar un registro de auditoria",
+    "cant-update-audit-log": "Ein Prüfungsprotokoll kann nicht aktualisiert werden",
     "card": "Karte",
     "carrier": "Träger",
     "carriers": "Träger",
