--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1343,14 +1343,14 @@
     "send-mail-error": "Errorea posta elektronikoa bidaltzean",
     "send-mail-ok": "Posta ondo bidalia",
     "send-videos": "Enviar vídeos",
-    "sent-a-audio": "Envió un audio",
-    "sent-a-document": "Envió un documento",
-    "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
-    "sent-a-video": "Envió un video",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-a-audio": "Audio bat bidali du",
+    "sent-a-document": "Dokumentu bat bidali du",
+    "sent-a-location": "Kokapen bat bidali du",
+    "sent-a-picture": "Irudia bidali du",
+    "sent-a-video": "Bideo bat bidali du",
+    "sent-message-by": "%date%an %nick%ek bidalia",
     "sepa-suffix": "SEPA atzizkia",
-    "september": "Septiembre",
+    "september": "Iraila",
     "sequences": "Sekuentziak",
     "serial-number": "Serie zenbakia",
     "serie": "Seriea",
@@ -1380,10 +1380,10 @@
     "show-pending-remittances": "Erakutsi zain dauden bidalketak",
     "show-price": "Prezioa inprimatzean bistaratu",
     "show-quantity": "Kopurua inprimatzean bistaratu",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Erakutsi sortu atal",
     "signature": "Sinadura",
     "simple": "Sinplea",
-    "simplified": "Simplificada",
+    "simplified": "Simplifikatua",
     "size": "Tamaina",
     "sketch": "Zirriborroa",
     "sketch-invoice-warning": "Faktura hau zirriborro bat dat. Ofiziala egin ezazu bere egoera igortuta-ra aldatuz.",
