--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -520,7 +520,7 @@
     "empty-ref-or-missing": "Riferimento vuoto o prodotto non trovato",
     "enable": "attivare",
     "enable-api": "Attiva API",
-    "enable-updates-beta": "Activar actualizaciones beta",
+    "enable-updates-beta": "Attiva aggiornamenti beta",
     "enabled": "Abilitato",
     "enabled-plugins": "Plugin attivi",
     "encrypt": "Crittazione",
