--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -259,7 +259,7 @@
     "color-dark": "Color oscuridad",
     "color-info": "Color info",
     "color-light": "Color luz",
-    "color-primary": "Color primario",
+    "color-primary": "Color primário",
     "color-secondary": "Color secundario",
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
